# gripette

./: README.md  bluetooth_tool.html  generate_proto.py  main.py  pyproject.toml
config/: cmdline.txt  config.txt
docs/: bluetooth_setup.md
grabette_gripper/: __main__.py  client.py  config.py  server.py  service.py
grabette_gripper/hardware/: camera.py  motors.py  sync.py
grabette_gripper/proto/: gripper_pb2.py  gripper_pb2.pyi  gripper_pb2_grpc.py
gripette/: __main__.py  client.py  config.py
gripette/bluetooth/: __main__.py  bluetooth_service.py
gripette/hardware/: camera.py  motors.py
gripette/proto/: gripper_pb2_grpc.py
proto/: gripper.proto
scripts/: camera_test.py  check_calibration.py  check_hardware.py  goto_zero.py  motor_test_local.py  sinus_test.py  teleop_bridge.py
systemd/: grabette-gripper.service  gripette-bluetooth.service  gripette.service
urdf/gripette_right/: config.json  robot.urdf  robot.xml
urdf/gripette_right/assets/: board.stl  dc_005_5a_20.stl  extruded__2.stl  extruded__3.stl  extruded__4.stl  extruded__5.stl  raspberry_pi_zero_2w.stl  sod323.stl  solid.stl  solid__10.stl  solid__11.stl  solid__12.stl  solid__13.stl  solid__14.stl  solid__15.stl  solid__16.stl  solid__17.stl  solid__18.stl  solid__19.stl  solid__2.stl  solid__20.stl  solid__21.stl  solid__22.stl  solid__3.stl  solid__4.stl  solid__5.stl  solid__6.stl  solid__7.stl  solid__8.stl  solid__9.stl  sot_23.stl  user_library_0603_smd_capacitor.stl  user_library_dg350_3_5_02p.stl  user_library_dg350_3_5_02p__2.stl  user_library_dg350_3_5_02p__3.stl  user_library_dg350_3_5_02p__4.stl  user_library_dg350_3_5_02p__5.stl  user_library_led_0603_r_pad.stl  user_library_led_0603_r_pad004.stl  user_library_led_0603_r_pocket002.stl  (+8 more)
urdf/openarm_gripette_right/: config.json  robot.urdf  robot.xml
urdf/openarm_gripette_right/assets/: gripper_base.stl
