[project]
name = "grabette-gripper"
version = "0.1.0"
description = "gRPC motor+camera service for GRABETTE gripper on Pi Zero 2W"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "pillow>=12.1.1",
    "protobuf>=4.25.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
rpi = [
    "picamera2",
    "rustypot",
]
dev = [
    "grpcio-tools>=1.60.0",
]

[tool.uv]
# numpy is provided by system-site-packages on the Pi (required by picamera2).
# This override prevents uv from installing it, avoiding a slow source build
# on the Pi Zero 2W. Requires --system-site-packages venv.
override-dependencies = ["numpy; python_version < '3.0'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
